调整时间格式

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -15,7 +15,7 @@ site.name = 工时记录管理
 
 
   # 默认数据库配置
-db.host = 127.0.0.1
+db.host = 192.168.3.118
 db.user = root
 db.password = 123456
 db.port = 3306
@@ -30,7 +30,7 @@ EnableAdmin = true
 
 
   # 缓存
-cache.cache = redis
+cache.cache = notRedis
 cache.redis.host = 127.0.0.1:6379
 cache.redis.masterName = redisMaster
 cache.redis.password = Tang3zang
