--- a/conf/app.conf
+++ b/conf/app.conf
@@ -15,9 +15,9 @@ site.name = 工时记录管理
 
 
   # 默认数据库配置
-db.host = 192.168.3.118
+db.host = 192.168.3.30
 db.user = root
-db.password = 123456
+db.password = Tang3zang
 db.port = 3306
 db.name = sinochem_man_hour
 db.timezone = Asia/Shanghai
