--- a/conf/app.conf
+++ b/conf/app.conf
@@ -15,11 +15,11 @@ site.name = 工时记录管理
 
 
   # 默认数据库配置
-db.host = 192.168.3.30
-db.user = root
-db.password = Tang3zang
+db.host = 192.168.100.66
+db.user = salesuatdba
+db.password = Salesdba#Uat2018
 db.port = 3306
-db.name = sinochem_man_hour
+db.name = sinochem_hour
 db.timezone = Asia/Shanghai
 
 # 进程内监控
